--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td> <img src="./Assets/Images/IMG_20201113_100923.jpg" alt="Vinuvg profile picture" width="150" height="180" ></td>
+                <td> <img src="IMG_20201113_100923.jpg" alt="Vinuvg profile picture" width="150" height="180" ></td>
                 <td><h1>Vinay K</h1>
                     <p> <em>Software Developer</em> </p>
                     <p>I am a full stack <strong>Web Developer</strong>.</p>
